log_file.txt
In file included from aghDlist.h:31:0,
                 from aghInclude.h:5,
                 from ex4main.cpp:1:
aghDlist_def.h: In instantiation of 'aghDlist<T>& aghDlist<T>::operator=(const aghDlist<T>&) [with T = int]':
ex4main.cpp:121:16:   required from here
aghDlist_def.h:220:21: error: 'append' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
    append(list.at(i));
                     ^
aghDlist_def.h:220:21: note: declarations in dependent base 'aghContainer<int>' are not found by unqualified lookup
aghDlist_def.h:220:21: note: use 'this->append' instead
In file included from aghSlist.h:30:0,
                 from aghInclude.h:4,
                 from ex4main.cpp:1:
aghSlist_def.h: In instantiation of 'aghSlist<T>& aghSlist<T>::operator=(const aghSlist<T>&) [with T = int]':
ex4main.cpp:255:28:   required from here
aghSlist_def.h:201:21: error: 'append' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
    append(list.at(i));
                     ^
aghSlist_def.h:201:21: note: declarations in dependent base 'aghContainer<int>' are not found by unqualified lookup
aghSlist_def.h:201:21: note: use 'this->append' instead
aghSlist_def.h: In instantiation of 'aghSlist<T>& aghSlist<T>::operator=(const aghSlist<T>&) [with T = aghSlist<int>]':
ex4main.cpp:295:1:   required from here
aghSlist_def.h:201:21: error: 'append' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
aghSlist_def.h:201:21: note: declarations in dependent base 'aghContainer<aghSlist<int> >' are not found by unqualified lookup
aghSlist_def.h:201:21: note: use 'this->append' instead
In file included from aghDlist.h:31:0,
                 from aghInclude.h:5,
                 from ex4main.cpp:1:
aghDlist_def.h: In instantiation of 'aghDlist<T>& aghDlist<T>::operator=(const aghDlist<T>&) [with T = aghDlist<int>]':
ex4main.cpp:295:1:   required from here
aghDlist_def.h:220:21: error: 'append' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
    append(list.at(i));
                     ^
aghDlist_def.h:220:21: note: declarations in dependent base 'aghContainer<aghDlist<int> >' are not found by unqualified lookup
aghDlist_def.h:220:21: note: use 'this->append' instead
